maze.lessons.maze.island.IslandMaze.scala.error
Escaper:34: error: Unit does not take parameters
    }else(){
           ^